lambdacube-dsl/tests/accept/reduce01.lc
data AB = A | B

render choice = let
  emptyFB           = FrameBuffer (ColorImage #1 (V4F 0.0 0.0 0.4 1.0))
  rasterCtx         = TriangleCtx CullNone PolygonFill NoOffset LastVertex
  fragmentCtx       = AccumulationContext (ColorOp NoBlending (V4B True True True True))
  vertexShader v    = VertexOut v 1.0 () (Smooth v)
  vertexStream      = Fetch "stream" Triangles (IV4F "position")
  primitiveStream   = Transform vertexShader vertexStream
  fragmentStream    = Rasterize rasterCtx primitiveStream
  fragmentShader v  = let res = case choice of
                            A -> v
                            B -> V4F 1.0 0.0 0.0 1.0
                      in FragmentOut res
  frame             = Accumulate fragmentCtx PassAll fragmentShader fragmentStream emptyFB
 in ScreenOut frame

data Out = Out (AB -> Output)

out = Out render

main = let
  Out o = out
  in o A
